fix(code-snippet): use Carbon designated spacing
See https://carbondesignsystem.com/components/code-snippet/style/#multi-line-code-snippet

--- a/packages/carbon-web-components/src/components/code-snippet/code-snippet.scss
+++ b/packages/carbon-web-components/src/components/code-snippet/code-snippet.scss
@@ -103,7 +103,7 @@ $css--plex: true !default;
     position: relative;
     height: auto;
     padding-bottom: 0;
-    padding-right: $carbon--spacing-06;
+    padding-right: $carbon--spacing-08;
     max-height: rem(238px);
     min-height: rem(56px);
     transition: max-height $duration--moderate-01 motion(standard, productive);
